<resources>
    <string name="app_name">VetCare</string>
    <string name="usuario_pantalla_principal">Usuario</string>
    <string name="contrasenia_pantalla_principal">Contraseña</string>
    <string name="logo_de_proyecto">Logo de proyecto</string>
    <string name="slogan">Tu mascota es nuestra prioridad !!</string>
    <string name="registro">Registro</string>
    <string name="iniciar_sesioon">Iniciar sesión</string>
    <string name="tiitulo_registro_usuario">Registro De Usuario</string>
    <string name="tiitulo_registro_veterinario">Registro De Mascotas</string>
    <string name="usuario_pantalla_registro">Usuario</string>
    <string name="nombre_pantalla_registro">Nombre</string>
    <string name="cancelar_pantalla_registro">Cancelar</string>
    <string name="enviar_pantalla_registro">Siguiente</string>
    <string name="contrasenia_pantalla_registro">Contraseña</string>
    <string name="teleefono_celular_pantalla_registro">Teléfono celular</string>
    <string name="direccioon_pantalla_registro">Dirección</string>
    <string name="correo_pantalla_registro">Correo</string>
    <string name="raza_de_la_mascota">Raza de la mascota</string>
    <string name="tiitulo_inicio">Inicio de sesión</string>
    <string name="nombre_de_la_mascota">Nombre de la mascota</string>
    <string name="apodo_de_la_mascota">Apodo de la mascota</string>
    <string name="tipo_de_la_mascota">Tipo De la mascota</string>
    <string name="gato">Gato</string>
    <string name="perro">Perro</string>
    <string name="edad_de_la_mascota">Edad de la mascota</string>
    <string name="completar_registro">Completar Registro</string>
</resources>