<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroMascotaActivity">

    <TextView
        android:id="@+id/textView"
        android:text="@string/tiitulo_registro_veterinario"
        android:textSize="34sp"
        android:textColor="#010F3E"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />

    <ImageView
        android:id="@+id/logoImageViewID"
        app:srcCompat="@drawable/logo_principal"
        android:layout_width="340dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/logo_de_proyecto" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petName"
        android:inputType="textPersonName"
        android:hint="@string/nombre_de_la_mascota"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/nombre_de_la_mascota"
        android:ems="50"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petAlias"
        android:inputType="textPersonName"
        android:hint="@string/apodo_de_la_mascota"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/apodo_de_la_mascota"
        android:ems="50"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_de_la_mascota"
            android:textSize="15sp">
        </TextView>
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gato"
            android:textSize="20sp">
        </CheckBox>
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content">
        </Space>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perro"
            android:textSize="20sp"
            android:layout_marginStart="20dp">
        </CheckBox>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petRace"
        android:inputType="textPersonName"
        android:hint="@string/raza_de_la_mascota"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/apodo_de_la_mascota"
        android:ems="50"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petAge"
        android:inputType="number"
        android:hint="@string/edad_de_la_mascota"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/apodo_de_la_mascota"
        android:ems="50"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/complete_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/completar_registro">
    </Button>
</LinearLayout>