<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:text="@string/tiitulo_inicio"
            android:textSize="34sp"
            android:textColor="#010F3E"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp" />

        <ImageView
            android:id="@+id/logoImageViewID"
            app:srcCompat="@drawable/logo_principal"
            android:layout_width="340dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/logo_de_proyecto" />

        <TextView
            android:id="@+id/sloganTextViewID"
            android:text="@string/slogan"
            android:textSize="42sp"
            android:gravity="center"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/usuario_pantalla_registro"
            android:ems="50"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:autofillHints="@string/usuario_pantalla_registro" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="@string/contrasenia_pantalla_principal"
            android:minHeight="50dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:text="@string/iniciar_sesioon"
            android:textSize="16sp"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>