<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/logoImageViewID"
            app:srcCompat="@drawable/logo_principal"
            android:layout_width="340dp"
            android:layout_height="240dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_de_proyecto" />

        <TextView
            android:id="@+id/sloganTextViewID"
            android:text="@string/slogan"
            android:textSize="42sp"
            android:gravity="center"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="60dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/iniciar_sesioonButtonID"
            android:text="@string/iniciar_sesioon"
            android:textSize="16sp"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/registroButtonID"
            android:text="@string/registro"
            android:textSize="16sp"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>